[package]
name = "project-iot"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", features = ["tokio", "default"] }
tokio = { version = "1.0", features = ["full"] }
pyo3 = { version = "0.19", features = ["auto-initialize"] }
chrono = "0.4"
lazy_static = "1.4"
serialport = "4.2"
serde_json = "1.0"
iced_aw = {version = "0.11", features = ["drop_down"]}